feat: use matterjs for hero section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,23 @@
 {
-  "cSpell.words": ["azeret"]
+  "cSpell.words": [
+    "azeret",
+    "chạy",
+    "Dùng",
+    "iconify",
+    "Khai",
+    "Không",
+    "PHẦN",
+    "quan",
+    "quản",
+    "tabler",
+    "thay",
+    "thiết",
+    "THIẾU",
+    "tính",
+    "toán",
+    "tránh",
+    "trọng",
+    "xuống"
+  ],
+  "cSpell.ignoreWords": ["wireframes"]
 }
