--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
+    "matter-js": "^0.20.0",
     "next": "16.1.5",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
@@ -57,7 +58,11 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.2.26",
+    "@iconify/react": "^6.0.2",
+    "@iconify/tailwind4": "^1.2.1",
     "@tailwindcss/postcss": "^4",
+    "@types/matter-js": "^0.20.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
