--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.14",
     "@iconify-json/tabler": "^1.2.26",
     "@iconify/react": "^6.0.2",
     "@iconify/tailwind4": "^1.2.1",
