--- a/biome.json
+++ b/biome.json
@@ -1,20 +1,65 @@
 {
+	"$schema": "https://biomejs.dev/schemas/2.3.14/schema.json",
+	"vcs": {
+		"enabled": true,
+		"clientKind": "git",
+		"useIgnoreFile": true,
+		"defaultBranch": "main"
+	},
+	"files": {
+		"ignoreUnknown": false
+	},
+	"formatter": {
+		"enabled": true,
+		"formatWithErrors": false,
+		"indentStyle": "tab",
+		"indentWidth": 2,
+		"lineEnding": "lf",
+		"lineWidth": 80,
+		"attributePosition": "auto"
+	},
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"nursery": {
-				"useTailwindAttributes": {
-					"level": "warn",
-					"options": {
-						"templateFunctions": ["clsx", "twMerge", "tw"]
-					}
-				}
+			"recommended": true,
+			"a11y": {
+				"noSvgWithoutTitle": "off"
+			},
+			"complexity": {
+				"noForEach": "off"
+			},
+			"style": {
+				"noNonNullAssertion": "off",
+				"useImportType": "off"
+			},
+			"suspicious": {
+				"noExplicitAny": "warn",
+				"noArrayIndexKey": "off"
 			}
 		}
 	},
 	"javascript": {
 		"formatter": {
-			"quoteStyle": "double"
+			"jsxQuoteStyle": "double",
+			"quoteProperties": "asNeeded",
+			"trailingCommas": "all",
+			"semicolons": "always",
+			"arrowParentheses": "always",
+			"bracketSpacing": true,
+			"bracketSameLine": false,
+			"quoteStyle": "double",
+			"attributePosition": "auto"
 		}
-	}
+	},
+	"overrides": [
+		{
+			"includes": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+			"formatter": {
+				"enabled": true
+			},
+			"linter": {
+				"enabled": true
+			}
+		}
+	]
 }
