--- a/biome.json
+++ b/biome.json
@@ -1,65 +1,65 @@
 {
 	"$schema": "https://biomejs.dev/schemas/2.3.14/schema.json",
-	"vcs": {
-		"enabled": true,
-		"clientKind": "git",
-		"useIgnoreFile": true,
-		"defaultBranch": "main"
-	},
 	"files": {
 		"ignoreUnknown": false
 	},
 	"formatter": {
+		"attributePosition": "auto",
 		"enabled": true,
 		"formatWithErrors": false,
 		"indentStyle": "tab",
 		"indentWidth": 2,
 		"lineEnding": "lf",
-		"lineWidth": 80,
-		"attributePosition": "auto"
+		"lineWidth": 80
+	},
+	"javascript": {
+		"formatter": {
+			"arrowParentheses": "always",
+			"attributePosition": "auto",
+			"bracketSameLine": false,
+			"bracketSpacing": true,
+			"jsxQuoteStyle": "double",
+			"quoteProperties": "asNeeded",
+			"quoteStyle": "double",
+			"semicolons": "always",
+			"trailingCommas": "all"
+		}
 	},
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true,
 			"a11y": {
 				"noSvgWithoutTitle": "off"
 			},
 			"complexity": {
 				"noForEach": "off"
 			},
+			"recommended": true,
 			"style": {
 				"noNonNullAssertion": "off",
 				"useImportType": "off"
 			},
 			"suspicious": {
-				"noExplicitAny": "warn",
-				"noArrayIndexKey": "off"
+				"noArrayIndexKey": "off",
+				"noExplicitAny": "warn"
 			}
-		}
-	},
-	"javascript": {
-		"formatter": {
-			"jsxQuoteStyle": "double",
-			"quoteProperties": "asNeeded",
-			"trailingCommas": "all",
-			"semicolons": "always",
-			"arrowParentheses": "always",
-			"bracketSpacing": true,
-			"bracketSameLine": false,
-			"quoteStyle": "double",
-			"attributePosition": "auto"
 		}
 	},
 	"overrides": [
 		{
-			"includes": ["*.ts", "*.tsx", "*.js", "*.jsx"],
 			"formatter": {
 				"enabled": true
 			},
+			"includes": ["*.ts", "*.tsx", "*.js", "*.jsx"],
 			"linter": {
 				"enabled": true
 			}
 		}
-	]
+	],
+	"vcs": {
+		"clientKind": "git",
+		"defaultBranch": "main",
+		"enabled": true,
+		"useIgnoreFile": true
+	}
 }
