feat: update readme and architecture with feature-base

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.33.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
     "matter-js": "^0.20.0",
@@ -58,6 +59,7 @@
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2",
     "zod": "^4.3.6"
   },
