--- a/biome.json
+++ b/biome.json
@@ -1,16 +1,56 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.14/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.13/schema.json",
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "on",
+				"useSortedKeys": "on"
+			}
+		},
+		"enabled": true
+	},
+	"css": {
+		"linter": {
+			"enabled": true
+		},
+		"parser": {
+			"cssModules": true,
+			"tailwindDirectives": true
+		}
+	},
 	"files": {
-		"ignoreUnknown": false
+		"ignoreUnknown": false,
+		"includes": [
+			"**",
+			"!**/node_modules",
+			"!**/dist",
+			"!**/build",
+			"!**/.next",
+			"!**/vite-env.d.ts",
+			"!**/routeTree.gen.ts",
+			"!**/package.json",
+			"!core"
+		]
 	},
 	"formatter": {
 		"attributePosition": "auto",
+		"bracketSameLine": false,
+		"bracketSpacing": true,
 		"enabled": true,
+		"expand": "auto",
 		"formatWithErrors": false,
-		"indentStyle": "tab",
+		"indentStyle": "space",
 		"indentWidth": 2,
 		"lineEnding": "lf",
-		"lineWidth": 80
+		"lineWidth": 80,
+		"useEditorconfig": true
+	},
+
+	"html": {
+		"formatter": {
+			"indentScriptAndStyle": false,
+			"selfCloseVoidElements": "always"
+		}
 	},
 	"javascript": {
 		"formatter": {
@@ -20,46 +60,107 @@
 			"bracketSpacing": true,
 			"jsxQuoteStyle": "double",
 			"quoteProperties": "asNeeded",
-			"quoteStyle": "double",
+			"quoteStyle": "single",
 			"semicolons": "always",
 			"trailingCommas": "all"
+		},
+		"globals": ["React"]
+	},
+	"json": {
+		"parser": {
+			"allowComments": true,
+			"allowTrailingCommas": true
 		}
 	},
 	"linter": {
 		"enabled": true,
 		"rules": {
 			"a11y": {
-				"noSvgWithoutTitle": "off"
+				"noAccessKey": "warn",
+				"noAriaHiddenOnFocusable": "warn",
+				"noAutofocus": "warn",
+				"noInteractiveElementToNoninteractiveRole": "warn",
+				"noLabelWithoutControl": "warn",
+				"noNoninteractiveElementToInteractiveRole": "warn",
+				"noNoninteractiveTabindex": "warn",
+				"noPositiveTabindex": "warn",
+				"noRedundantAlt": "warn",
+				"noRedundantRoles": "warn",
+				"noStaticElementInteractions": "warn",
+				"noSvgWithoutTitle": "warn",
+				"recommended": true,
+				"useAltText": "warn",
+				"useAnchorContent": "warn",
+				"useAriaPropsForRole": "warn",
+				"useAriaPropsSupportedByRole": "warn",
+				"useButtonType": "warn",
+				"useFocusableInteractive": "warn",
+				"useHeadingContent": "warn",
+				"useHtmlLang": "warn",
+				"useKeyWithClickEvents": "warn",
+				"useKeyWithMouseEvents": "warn",
+				"useMediaCaption": "warn",
+				"useSemanticElements": "warn",
+				"useValidAnchor": "warn",
+				"useValidAriaProps": "warn",
+				"useValidAriaRole": "warn"
 			},
 			"complexity": {
-				"noForEach": "off"
+				"noBannedTypes": "warn"
+			},
+			"correctness": {
+				"noChildrenProp": "warn",
+				"noInvalidUseBeforeDeclaration": "warn",
+				"noUnreachable": "warn",
+				"noUnusedFunctionParameters": "warn",
+				"noUnusedImports": "error",
+				"noUnusedVariables": "warn",
+				"useExhaustiveDependencies": "warn",
+				"useHookAtTopLevel": "warn",
+				"useJsxKeyInIterable": "warn"
+			},
+			"nursery": {
+				"useSortedClasses": {
+					"fix": "safe",
+					"level": "error",
+					"options": {
+						"attributes": ["className", "class"],
+						"functions": ["cn", "clsx", "cva", "tv"]
+					}
+				}
 			},
 			"recommended": true,
+			"security": {
+				"noDangerouslySetInnerHtml": "warn"
+			},
 			"style": {
 				"noNonNullAssertion": "off",
-				"useImportType": "off"
+				"useImportType": "error"
 			},
 			"suspicious": {
-				"noArrayIndexKey": "off",
-				"noExplicitAny": "warn"
+				"noArrayIndexKey": "warn",
+				"noAssignInExpressions": "warn",
+				"noControlCharactersInRegex": "warn",
+				"noDuplicateCase": "warn",
+				"noExplicitAny": "warn",
+				"noGlobalAssign": "warn",
+				"noImplicitAnyLet": "warn",
+				"noSelfCompare": "warn",
+				"noShadowRestrictedNames": "warn",
+				"useIterableCallbackReturn": "warn"
 			}
 		}
 	},
 	"overrides": [
 		{
-			"formatter": {
-				"enabled": true
-			},
-			"includes": ["*.ts", "*.tsx", "*.js", "*.jsx"],
 			"linter": {
-				"enabled": true
+				"rules": {
+					"correctness": {
+						"noUnusedVariables": "off"
+					}
+				}
 			}
 		}
 	],
-	"vcs": {
-		"clientKind": "git",
-		"defaultBranch": "main",
-		"enabled": true,
-		"useIgnoreFile": true
-	}
+	"vcs": { "clientKind": "git", "enabled": true, "useIgnoreFile": true }
 }
