--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "biome:fix": "biome check --write ."
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -46,7 +47,9 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.33.0",
+    "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "matter-js": "^0.20.0",
     "next": "16.1.5",
