feat: update project section

--- a/biome.json
+++ b/biome.json
@@ -28,8 +28,7 @@
       "!**/.next",
       "!**/vite-env.d.ts",
       "!**/routeTree.gen.ts",
-      "!**/package.json",
-      "!core"
+      "!**/package.json"
     ]
   },
   "formatter": {
